# KASSIBER

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md
android/: gradlew  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/kassiber/app/: KassiberApplication.kt
android/app/src/main/java/com/kassiber/app/ble/: BleOnboardingManager.kt  QrScanner.kt
android/app/src/main/java/com/kassiber/app/crypto/: CryptoBridge.kt
android/app/src/main/java/com/kassiber/app/overlay/: DecryptOverlay.kt  ReplyOverlay.kt
android/app/src/main/java/com/kassiber/app/service/: KassiberAccessibilityService.kt
android/app/src/main/java/com/kassiber/app/ui/: MainActivity.kt
android/app/src/main/java/com/kassiber/app/ui/theme/: Theme.kt
android/app/src/main/java/com/kassiber/ffi/: kassiber_ffi.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: colors.xml  ids.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: accessibility_service_config.xml
rust_core/: Cargo.toml  build-android.sh
rust_core/kassiber-crypto/: Cargo.toml
rust_core/kassiber-crypto/src/: error.rs  keystore.rs  lib.rs  primitives.rs  ratchet.rs  session.rs
rust_core/kassiber-ffi/: Cargo.toml  build.rs  uniffi.toml
rust_core/kassiber-ffi/src/: kassiber.udl  lib.rs
rust_core/kassiber-transport/: Cargo.toml
rust_core/kassiber-transport/src/: codec.rs  dictionary.rs  error.rs  framing.rs  lib.rs
rust_core/kassiber-transport/src/dictionary/: bip39_english.rs
rust_core/tools/uniffi-bindgen/: Cargo.toml  main.rs
