[workspace]
members = ["kassiber-crypto", "kassiber-transport", "kassiber-ffi", "tools/uniffi-bindgen"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["KASSIBER Contributors"]
license = "AGPL-3.0"
repository = "https://github.com/deusexlumen/KASSIBER"
rust-version = "1.80"

[workspace.dependencies]
kassiber-crypto = { path = "kassiber-crypto" }
kassiber-transport = { path = "kassiber-transport" }

# Post-quantum cryptography (RustCrypto, FIPS 203 / FIPS 204)
ml-kem = { version = "0.3", features = ["zeroize"] }
ml-dsa = { version = "0.1", features = ["zeroize", "rand_core"] }

# Classical cryptography
x25519-dalek = { version = "3", features = ["static_secrets", "zeroize"] }
ed25519-dalek = { version = "3", features = ["rand_core"] }
aes-gcm = "0.10"
sha2 = "0.10"
sha3 = "0.10"
hkdf = "0.12"
hmac = "0.12"

# RNG
rand = "0.10"
rand_core = "0.10"

# Serialization / misc
zeroize = { version = "1.8", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
thiserror = "2"
log = "0.4"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros"] }
uniffi = "0.29"
