[package]
name = "kassiber-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "KASSIBER PQC + Classical Hybrid Cryptography"

[dependencies]
ml-kem.workspace = true
ml-dsa.workspace = true
x25519-dalek.workspace = true
ed25519-dalek.workspace = true
aes-gcm.workspace = true
sha2.workspace = true
sha3.workspace = true
hkdf.workspace = true
hmac.workspace = true
rand.workspace = true
rand_core.workspace = true
zeroize.workspace = true
tokio.workspace = true
serde.workspace = true
postcard.workspace = true
log.workspace = true
thiserror.workspace = true

[dev-dependencies]
hex = "0.4"
