[package]
name = "kassiber-ffi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "KASSIBER UniFFI Android Bindings"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "kassiber_ffi"

[dependencies]
kassiber-crypto = { workspace = true }
kassiber-transport = { workspace = true }
uniffi = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }
